<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_utilities</name>
  <version>3.0.1</version>
  <description>A set of utility functions designed for micro-ROS</description>
  <maintainer email="pablogarrido@eprosima.com">Pablo Garrido</maintainer>
  <license>Apache License 2.0</license>

  <depend>rosidl_typesupport_introspection_c</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rcutils</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
